Ajustes e fazendo funcionar

--- a/ipm_system/core/templates/core/base/styles.html
+++ b/ipm_system/core/templates/core/base/styles.html
@@ -2,7 +2,8 @@
 
 
 <link href="{{ STATIC_URL }}core/css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
-<link href="{{ STATIC_URL }}core/css/font-awesome.min.css" rel="stylesheet" type="text/css" media="all">
+<link href="{{ STATIC_URL }}core/css/bootstrap-theme.css" rel="stylesheet" type="text/css" media="all">
+<link href="{{ STATIC_URL }}core/css/theme.css" rel="stylesheet" type="text/css" media="all">
 
 
 <!-- <link href="{{ STATIC_URL }}core/css/style.css" rel="stylesheet" type="text/css" media="all" />
