--- a/ipm_system/core/templates/core/index.html
+++ b/ipm_system/core/templates/core/index.html
@@ -1,7 +1,7 @@
 {% extends 'core/base/base.html' %}
 
 
-
+{% block content %}
 
 <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
@@ -559,3 +559,5 @@
           <span class="sr-only">Next</span>
         </a>
       </div>
+
+{% endblock %}
