--- a/ipm_system/core/templates/core/base/base.html
+++ b/ipm_system/core/templates/core/base/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
      <head>
-        <title>IPM (International Punishment Machines) | {{ title_page }}</title>
+        <title>IPM (International Punishment Machines) | {{ title_page }} |</title>
 
       {% block metas %}
         <meta charset="utf-8">
@@ -14,7 +14,7 @@
     {% block styles %}
         {% include 'core/base/styles.html' %}
     {% endblock %}
-
+    {% block head %} {% endblock %}
   </head>
 
   <body>
@@ -29,34 +29,27 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">IPM</a>
+          <a class="navbar-brand" href="{% url 'home' %}">IPM</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">Clientes</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li role="separator" class="divider"></li>
-                <li class="dropdown-header">Nav header</li>
-                <li><a href="#">Separated link</a></li>
-                <li><a href="#">One more separated link</a></li>
-              </ul>
-            </li>
+            <li><a href="{% url 'home' %}">Home</a></li>
+            <li><a href="{% url 'list_customer' %}">Clientes</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
 
-    <div class="container theme-showcase" role="main">
-      {% block content %}
-          <!-- CONTEUDO PRINCIPAL DO SITE -->
-      {% endblock %}
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          {% block content %}
+              <!-- CONTEUDO PRINCIPAL DO SITE -->
+          {% endblock %}
+          
+        </div>
+        
+      </div>
 
     </div> <!-- /container -->
 
