Ajustes no Readme e na aplicação

--- a/ipm_system/core/templates/core/index.html
+++ b/ipm_system/core/templates/core/index.html
@@ -6,7 +6,9 @@
 <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
         <h1>Home Page</h1>
-        <p>This is a template showcasing the optional theme stylesheet included in Bootstrap. Use it as a starting point to create something more unique by building on or modifying it.</p>
+        <p>Este é um aplicação de teste para o processo seletivo da empresa VersatusHPC <br/>
+			Sistema desenvolvido por Cesar Augusto Bruschetta utilizando o framework Django e linguagem Python.
+		</p>
       </div>
 
 {% endblock %}
