--- a/ipm_system/core/templates/core/edit_hardware.html
+++ b/ipm_system/core/templates/core/edit_hardware.html
@@ -9,7 +9,8 @@
     <div>
 
         <div class="row">
-            <div class="col-sm-12 col-lg-6">
+            <div class="col-lg-12">
+                <h3>Cliente: {{ customer.name }} </h3>
                 {% if is_edit %}
                     <h3>Edição do Hardware: {{ hardware.name }}</h3>
                 {% else %}
